math_functions.h

// math_functions.h

//add function (Fortran)
double add_f(double a, double b);
//sub function (Fortran)
double sub_f(double a, double b);
//div function (Fortran)
double div_f(double a, double b);
//mul function (Fortran)
double mul_f(double a, double b);